--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     recommendation systems, dashboards, and ML models with modern UI.
                 </p>
                 <div class="hero-buttons" style="margin-top: 20px;">
-                    <a href="#" class="btn preview-btn">Preview Resume</a>
+                    <a href="/resume.html" class="btn">Preview Resume</a>
                     <a href="/static/Sanjay_Resume.pdf" download class="btn">Download Resume</a>
                 </div>
             </div>
@@ -244,3 +244,4 @@
     </script>
 </body>
 </html>
+
