--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<!-- NAVBAR (SAME UI) -->
+<!-- NAVBAR (UNCHANGED) -->
 <header class="navbar">
     <nav>
         <div class="logo">Portfolio</div>
@@ -30,11 +30,13 @@
     </nav>
 </header>
 
-<!-- RESUME PREVIEW -->
+<!-- RESUME SECTION -->
 <section class="section" style="padding-top:140px;">
     <h2 class="section-title">My Resume</h2>
 
+    <!-- RESUME CARD -->
     <div
+        class="resume-card"
         style="
             max-width:1100px;
             margin:auto;
@@ -45,12 +47,23 @@
             box-shadow:0 20px 50px rgba(0,0,0,0.15);
         "
     >
+
+        <!-- DESKTOP PDF PREVIEW (UNCHANGED) -->
         <iframe
-            src="/static/Sanjay_Resume.pdf#zoom=page-width"
-            style="width:100%; height:85vh; border:none;"
+            src="/static/Sanjay_Resume.pdf"
+            class="resume-iframe"
         ></iframe>
+
+        <!-- MOBILE FALLBACK (ONLY FOR MOBILE) -->
+        <div class="resume-mobile">
+            <a href="/static/Sanjay_Resume.pdf" target="_blank" class="btn resume-open-btn">
+                📄 Open Resume
+            </a>
+        </div>
+
     </div>
 
+    <!-- ACTION BUTTONS -->
     <div class="hero-buttons" style="margin-top:40px; text-align:center;">
         <a href="/static/Sanjay_Resume.pdf" download class="btn">Download Resume</a>
         <a href="/" class="btn">Back to Home</a>
