--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     recommendation systems, dashboards, and ML models with modern UI.
                 </p>
                 <div class="hero-buttons" style="margin-top: 20px;">
-                    <a href="/resume.html" class="btn">Preview Resume</a>
+                    <a href="/resume" class="btn">Preview Resume</a>
                     <a href="/static/Sanjay_Resume.pdf" download class="btn">Download Resume</a>
                 </div>
             </div>
@@ -120,7 +120,13 @@
 
         <div class="project-row" data-aos="fade-up" data-aos-delay="100">
             <div class="project-row-image">
-                <img src="/static/Spotify.png" alt="Spotify UI">
+                <img src="/static/Spotify.png" alt="Spotify UI" class="project-preview"
+     data-title="Spotify Real-Time Recommendation System"
+     data-tech="Python, Streamlit, Spotify API, Recommendation System, Real-Time Search"
+     data-desc="A real-time music search & recommendation system with Spotify-styled UI and artist insights."
+     data-github="https://github.com/Sanjay20057/Spotify-Recommendation-System-Real-Time"
+     data-live="https://spotify-recommendation-system-real-time.streamlit.app"
+     data-images="/static/Spotify.png,/static/Spotify2.png,/static/Spotify3.png,/static/Spotify4.png,/static/Spotify5.png,/static/Spotify6.png,/static/Spotify7.png">
             </div>
             <div class="project-row-details">
                 <h3>Spotify Real-Time Recommendation System</h3>
@@ -134,12 +140,20 @@
                 <p>A real-time music search & recommendation system with Spotify-styled UI and artist insights.</p>
                 <a href="https://github.com/Sanjay20057/Spotify-Recommendation-System-Real-Time" target="_blank" class="btn project-btn">View Code</a>
                 <a href="https://spotify-recommendation-system-real-time.streamlit.app" target="_blank" class="btn project-btn">View Deployed App</a>
+                <a href="/case-studies#spotify" class="btn project-btn">Case Study</a>
             </div>
         </div>
 
         <div class="project-row" data-aos="fade-up" data-aos-delay="200">
             <div class="project-row-image">
-                <img src="/static/IPL.png" alt="IPL Dashboard UI">
+                <img src="/static/IPL.png" alt="IPL Dashboard UI" class="project-preview"
+     data-title="IPL Data Analysis Dashboard"
+     data-tech="Python, Pandas, Matplotlib, Data Analysis, Visualization"
+     data-desc="12-season cricket analysis dashboard using Pandas + Matplotlib."
+     data-github="https://github.com/Sanjay20057/IPL_Analysis"
+     data-live="https://iplanalysis2008-2019.streamlit.app"
+     data-images="/static/IPL.png,/static/IPL2.png,/static/IPL3.png,/static/IPL4.png,/static/IPL5.png,/static/IPL6.png,/static/IPL7.png,/static/IPL8.png">
+
             </div>
             <div class="project-row-details">
                 <h3>IPL Data Analysis Dashboard</h3>
@@ -153,12 +167,19 @@
                 <p>12-season cricket analysis dashboard using Pandas + Matplotlib.</p>
                 <a href="https://github.com/Sanjay20057/IPL_Analysis" target="_blank" class="btn project-btn">View Code</a>
                 <a href="https://iplanalysis2008-2019.streamlit.app" target="_blank" class="btn project-btn">View Deployed App</a>
+                <a href="/case-studies#ipl" class="btn project-btn">Case Study</a>
             </div>
         </div>
 
         <div class="project-row" data-aos="fade-up" data-aos-delay="300">
             <div class="project-row-image">
-                <img src="/static/Movie.png" alt="Movie Recommendation UI">
+                <img src="/static/Movie.png" alt="Movie Recommendation UI" class="project-preview"
+     data-title="Movie Recommendation System"
+     data-tech="Python, TF-IDF, Cosine Similarity, Scikit-Learn, NLP"
+     data-desc="Content-based movie recommendation system using TF-IDF & cosine similarity."
+     data-github="https://github.com/Sanjay20057/Movie-Recommender-System"
+     data-live="https://movie-recommender-system-2005.streamlit.app"
+     data-images="/static/Movie.png,/static/Movie2.png,/static/Movie3.png">
             </div>
             <div class="project-row-details">
                 <h3>Movie Recommendation System</h3>
@@ -172,12 +193,19 @@
                 <p>Content-based movie recommendation system using TF-IDF & cosine similarity.</p>
                 <a href="https://github.com/Sanjay20057/Movie-Recommender-System" target="_blank" class="btn project-btn">View Code</a>
                 <a href="https://movie-recommender-system-2005.streamlit.app" target="_blank" class="btn project-btn">View Deployed App</a>
+                <a href="/case-studies#movie" class="btn project-btn">Case Study</a>
             </div>
         </div>
 
         <div class="project-row" data-aos="fade-up" data-aos-delay="400">
             <div class="project-row-image">
-                <img src="/static/Car Price.png" alt="Car Price Prediction UI">
+                <img src="/static/Car-Price.png" alt="Car Price Prediction UI" class="project-preview"
+     data-title="Used Car Price Prediction"
+     data-tech="Python, Regression, Feature Engineering, Scikit-Learn, Machine Learning"
+     data-desc="ML regression model to predict car prices using feature engineering."
+     data-github="https://github.com/Sanjay20057/Car-Price-Prediction"
+     data-live="https://car-price-prediction-2005.streamlit.app"
+     data-images="/static/Car-Price.png,/static/Car-Price2.png,/static/Car-Price3.png">
             </div>
             <div class="project-row-details">
                 <h3>Used Car Price Prediction</h3>
@@ -191,13 +219,20 @@
                 <p>ML regression model to predict car prices using feature engineering.</p>
                 <a href="https://github.com/Sanjay20057/Car-Price-Prediction" target="_blank" class="btn project-btn">View Code</a>
                 <a href="https://car-price-prediction-2005.streamlit.app" target="_blank" class="btn project-btn">View Deployed App</a>
+                <a href="/case-studies#car" class="btn project-btn">Case Study</a>
             </div>
         </div>
 
         <!-- FIXED Cyber Threat Project -->
         <div class="project-row" data-aos="fade-up" data-aos-delay="500">
             <div class="project-row-image">
-                <img src="/static/CyberThreat.png" alt="Cyber Threat Detection UI">
+                <img src="/static/CyberThreat.png" alt="Cyber Threat Detection UI" class="project-preview"
+     data-title="Cyber Threat Detection Suite"
+     data-tech="Python, Streamlit, Cybersecurity, Threat Detection, ML/AI"
+     data-desc="A complete cyber threat detection suite with real-time analysis and threat classification."
+     data-github="https://github.com/Sanjay20057/Cyber-Threat-Detection-Suite"
+     data-live="https://cyber-threat-detection-suite.streamlit.app/"
+     data-images="/static/CyberThreat.png,/static/CyberThreat2.png,/static/CyberThreat3.png,/static/CyberThreat4.png">
             </div>
             <div class="project-row-details">
                 <h3>Cyber Threat Detection Suite</h3>
@@ -211,6 +246,7 @@
                 <p>A complete cyber threat detection suite with real-time analysis and threat classification.</p>
                 <a href="https://github.com/Sanjay20057/Cyber-Threat-Detection-Suite" target="_blank" class="btn project-btn">View Code</a>
                 <a href="https://cyber-threat-detection-suite.streamlit.app/" target="_blank" class="btn project-btn">View Deployed App</a>
+                <a href="/case-studies#cyber" class="btn project-btn">Case Study</a>
             </div>
         </div>
 
@@ -244,4 +280,3 @@
     </script>
 </body>
 </html>
-
