--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resume - Sanjay Sharma</title>
+    <title>Sanjay Sharma | Resume</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='Logo/Logo.png') }}" />
 
     <!-- Main Portfolio CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
@@ -202,23 +203,7 @@
     <nav>
         <div class="logo">
             <a href="/">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 100 100">
-                    <polygon points="50,5 90,27.5 90,72.5 50,95 10,72.5 10,27.5"
-                             fill="none"
-                             stroke="currentColor"
-                             stroke-width="2.5"
-                             stroke-linecap="round"
-                             stroke-linejoin="round"
-                             style="transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);"/>
-                    <text x="50"
-                          y="62"
-                          text-anchor="middle"
-                          fill="currentColor"
-                          font-size="32"
-                          font-family="Arial, sans-serif"
-                          font-weight="normal"
-                          letter-spacing="2">SS</text>
-                </svg>
+                <img src="{{ url_for('static', filename='1000015565.png') }}" alt="Sanjay Sharma" width="50" height="50">
             </a>
         </div>
 
@@ -279,28 +264,15 @@
             </a>
         </div>
 
-        <!-- Optional: Tabs for different resume versions -->
-        <!-- Uncomment if you have multiple resume versions
-        <div class="resume-tabs">
-            <button class="tab-btn active" data-resume="main">Main Resume</button>
-            <button class="tab-btn" data-resume="technical">Technical Resume</button>
-        </div>
-        -->
-
         <!-- Resume Viewer -->
         <div class="resume-viewer fade-up">
-            <img src="{{ url_for('static', filename='resume_images/Sanjay_Resume_image.jpg') }}"
+            <img src="{{ url_for('static', filename='Resume_image/Sanjay_Resume_image.jpg') }}"
                  alt="Sanjay Sharma Resume"
                  loading="lazy">
         </div>
 
     </div>
 </div>
-
-<!-- Footer -->
-<footer style="background: transparent; margin-top: 60px;">
-    <p style="color: #64748b;">Designed & Built by Sanjay Sharma</p>
-</footer>
 
 <script>
 // Mobile menu functionality (from your existing script.js)
@@ -342,6 +314,26 @@ window.addEventListener('load', () => {
     });
 });
 </script>
+<!-- ENHANCED FOOTER -->
+<footer class="fade-up">
+    <!-- Mobile Social Icons -->
+    <div class="footer-social-mobile">
+        <a href="https://github.com/Sanjay20057" target="_blank" aria-label="GitHub">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+        </a>
+        <a href="https://www.linkedin.com/in/sanjay20057" target="_blank" aria-label="LinkedIn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+        </a>
+        <a href="mailto:workingwithsanjay@gmail.com" aria-label="Email">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+        </a>
+    </div>
+
+    <!-- Footer Text with GitHub Link -->
+    <a href="https://github.com/Sanjay20057/Portfolio" target="_blank" rel="noopener noreferrer" class="footer-link">
+        <p>Designed & Built by Sanjay Sharma</p>
+    </a>
+</footer>
 
 </body>
 </html>
