--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sanjay Sharma</title>
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='Logo/Logo.png') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
-    <script defer src="{{ url_for('static', filename='script.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for(filename='style.css') }}" />
+    <script defer src="{{ url_for(filename='script.js') }}"></script>
 </head>
 
 <body>
@@ -457,3 +457,4 @@
 
 </body>
 </html>
+
