--- a/resume.html
+++ b/resume.html
@@ -4,23 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sanjay Sharma | Resume</title>
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='Logo/Logo.png') }}" />
-
-    <!-- Main Portfolio CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
-    <script defer src="{{ url_for('static', filename='script.js') }}"></script>
-
-    <!-- Google Font -->
+    <link rel="icon" type="image/png" href="static/Logo/Logo.png" />
+    <link rel="stylesheet" href="static/style.css" />
+    <script defer src="static/script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <style>
-        /* Match portfolio dark theme */
         body {
             background-color: var(--navy);
             color: var(--slate);
         }
 
-        /* Main Container */
         .resume-wrapper {
             min-height: 100vh;
             padding-top: var(--nav-height);
@@ -32,7 +26,6 @@
             padding: 60px 150px;
         }
 
-        /* Back Link */
         .back-link {
             display: inline-flex;
             align-items: center;
@@ -55,7 +48,6 @@
             content: "← ";
         }
 
-        /* Header Section */
         .resume-header {
             text-align: center;
             margin-bottom: 50px;
@@ -74,7 +66,6 @@
             margin-bottom: 30px;
         }
 
-        /* Action Buttons */
         .resume-actions {
             display: flex;
             gap: 20px;
@@ -110,7 +101,6 @@
             background-color: var(--green-tint);
         }
 
-        /* Resume Viewer Card */
         .resume-viewer {
             background-color: var(--light-navy);
             border-radius: var(--border-radius);
@@ -130,7 +120,6 @@
             border-radius: var(--border-radius);
         }
 
-        /* Animations */
         .fade-up {
             opacity: 0;
             transform: translateY(30px);
@@ -143,7 +132,11 @@
                         transform 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
         }
 
-        /* Mobile Responsiveness */
+        .icon {
+            width: 20px;
+            height: 20px;
+        }
+
         @media (max-width: 1080px) {
             .resume-container {
                 padding: 60px 100px;
@@ -187,23 +180,31 @@
                 font-size: var(--fz-md);
             }
         }
-
-        /* Icon styles */
-        .icon {
-            width: 20px;
-            height: 20px;
-        }
     </style>
 </head>
 
 <body>
 
-<!-- HEADER -->
 <header class="navbar">
     <nav>
         <div class="logo">
             <a href="/">
-                <img src="{{ url_for('static', filename='1000015565.png') }}" alt="Sanjay Sharma" width="50" height="50">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 100 100">
+                    <polygon points="50,5 90,27.5 90,72.5 50,95 10,72.5 10,27.5"
+                             fill="none"
+                             stroke="currentColor"
+                             stroke-width="2.5"
+                             stroke-linecap="round"
+                             stroke-linejoin="round"/>
+                    <text x="50"
+                          y="62"
+                          text-anchor="middle"
+                          fill="currentColor"
+                          font-size="32"
+                          font-family="Arial, sans-serif"
+                          font-weight="normal"
+                          letter-spacing="2">SS</text>
+                </svg>
             </a>
         </div>
 
@@ -214,31 +215,27 @@
         </div>
 
         <div class="nav-links" id="nav-links">
-            <a href="/#about"><span class="nav-number">01.</span> About</a>
-            <a href="/#experience"><span class="nav-number">02.</span> Skills</a>
-            <a href="/#work"><span class="nav-number">03.</span> Project</a>
-            <a href="/#contact"><span class="nav-number">04.</span> Contact</a>
-            <a href="/resume" class="resume-btn">Resume</a>
+            <a href="index.html#about"><span class="nav-number">01.</span> About</a>
+            <a href="index.html#experience"><span class="nav-number">02.</span> Skills</a>
+            <a href="index.html#work"><span class="nav-number">03.</span> Project</a>
+            <a href="index.html#contact"><span class="nav-number">04.</span> Contact</a>
+            <a href="resume.html" class="resume-btn">Resume</a>
         </div>
     </nav>
 </header>
 
-<!-- MAIN CONTENT -->
 <div class="resume-wrapper">
     <div class="resume-container">
 
-        <!-- Back Link -->
-        <a href="/" class="back-link">Back to Portfolio</a>
+        <a href="index.html" class="back-link">Back to Portfolio</a>
 
-        <!-- Header -->
         <div class="resume-header">
             <h1 class="fade-up">My Resume</h1>
             <p class="fade-up">Data Scientist | Machine Learning Engineer | Python Developer</p>
         </div>
 
-        <!-- Action Buttons -->
         <div class="resume-actions fade-up">
-            <a href="{{ url_for('static', filename='Sanjay_Resume.pdf') }}" download class="action-btn primary">
+            <a href="static/Sanjay_Resume.pdf" download class="action-btn primary">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                     <polyline points="7 10 12 15 17 10"></polyline>
@@ -246,16 +243,7 @@
                 </svg>
                 Download PDF
             </a>
-            <a href="/case-studies#spotify" class="action-btn">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-                    <polyline points="14 2 14 8 20 8"></polyline>
-                    <line x1="16" y1="13" x2="8" y2="13"></line>
-                    <line x1="16" y1="17" x2="8" y2="17"></line>
-                </svg>
-                View Case Studies
-            </a>
-            <a href="/#contact" class="action-btn">
+            <a href="index.html#contact" class="action-btn">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
                     <polyline points="22,6 12,13 2,6"></polyline>
@@ -264,9 +252,8 @@
             </a>
         </div>
 
-        <!-- Resume Viewer -->
         <div class="resume-viewer fade-up">
-            <img src="{{ url_for('static', filename='Resume_image/Sanjay_Resume_image.jpg') }}"
+            <img src="static/Resume_image/Sanjay_Resume_image.jpg"
                  alt="Sanjay Sharma Resume"
                  loading="lazy">
         </div>
@@ -275,7 +262,6 @@
 </div>
 
 <script>
-// Mobile menu functionality (from your existing script.js)
 const mobileMenu = document.getElementById("mobile-menu");
 const navLinks = document.getElementById("nav-links");
 
@@ -294,17 +280,14 @@ if (mobileMenu && navLinks) {
     });
 }
 
-// Smooth scroll for anchor links
-document.querySelectorAll('a[href^="/#"]').forEach(anchor => {
+document.querySelectorAll('a[href^="index.html#"]').forEach(anchor => {
     anchor.addEventListener('click', function (e) {
         e.preventDefault();
-        const targetId = this.getAttribute('href').substring(2);
-
-        window.location.href = '/' + this.getAttribute('href').substring(1);
+        const targetId = this.getAttribute('href').substring(11);
+        window.location.href = 'index.html#' + targetId;
     });
 });
 
-// Fade-up animations on page load
 window.addEventListener('load', () => {
     const fadeElements = document.querySelectorAll('.fade-up');
     fadeElements.forEach((element, index) => {
@@ -314,9 +297,8 @@ window.addEventListener('load', () => {
     });
 });
 </script>
-<!-- ENHANCED FOOTER -->
+
 <footer class="fade-up">
-    <!-- Mobile Social Icons -->
     <div class="footer-social-mobile">
         <a href="https://github.com/Sanjay20057" target="_blank" aria-label="GitHub">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
@@ -328,8 +310,6 @@ window.addEventListener('load', () => {
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
         </a>
     </div>
-
-    <!-- Footer Text with GitHub Link -->
     <a href="https://github.com/Sanjay20057/Portfolio" target="_blank" rel="noopener noreferrer" class="footer-link">
         <p>Designed & Built by Sanjay Sharma</p>
     </a>
